--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -94,6 +94,30 @@
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
 
+		<!--  Карпаты -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Karpati.html">
+                            <img src="images/karpati-min.jpg" alt="Karpati" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>2400грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Karpati.html">
+                                Карпаты
+                            </a>
+                        </h5>
+                        <p class=""> Расписание походов в Карпаты на 2021 год </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Карпаты  -->  
+		    
 		<!--  Харьков -->
 		<div class="col-lg-3 col-sm-6 mb-5">
 		    <div class="image-tour position-relative">
