--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -3,7 +3,7 @@
 <html lang="ru">
 
 <head>
-    <title>Туры | Путешествия | Новый поворот </title>
+    <title>Туры, Стр.2 | Путешествия | Новый поворот </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Туры, Туры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации" />
