--- a/index.html
+++ b/index.html
@@ -293,33 +293,30 @@
             </p>
             <div class="row">
                 
-                <!--  Джарылгач - Украинские Мальдивы  -->
+                 <!--  Вилково, Устрицы И Шабо -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Dzharylgach.html">
-                            <img src="images/Dzharylgach/home-Dzharylgach.jpg" alt="baloon-fast"
-                                class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html">
+                            <img src="/images/Vilkovo-Oysters-Shabo/home-Vilkovo-Oysters-Shabo.jpg" alt="Vilkovo-Oysters-Shabo" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>2500грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span> 2975грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесская обл.</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Dzharylgach.html">
-                                Джарылгач
+                            <a href="https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html">
+                                Вилково, Устрицы И Шабо
                             </a>
                         </h5>
-                        <p class="">
-                            Джарылгач - Украинские Мальдивы
-                        </p>
+                        <p class=""> Венеция по УКРАИНСКИ!  </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 24 - 25 Июля </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>11 - 12 Сентября</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Джарылгач - Украинские Мальдивы -->
-
+                <!--  //Вилково, Устрицы И Шабо  -->
+                
                 <!-- Сырная ферма и Пасека -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
