--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -5,11 +5,11 @@
 <title>Вилково, Устрицы и Шабо | Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Сырная ферма и Пасека ">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Венеция по УКРАИНСКИ! Морские приключения, устричные истории и вкуснейшие вина Шабо! Край земли 0 километр!">
    
     <!-- Open Graph data-->
     <meta property="og:title" content="Вилково, Устрицы и Шабо ">
-    <meta property="og:description" content="Вилково, Устрицы и Шабо "/>
+    <meta property="og:description" content="Венеция по УКРАИНСКИ! Морские приключения, устричные истории и вкуснейшие вина Шабо! Край земли 0 километр!"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html"/>
     <meta property="og:image" content="/images/Vilkovo-Oysters-Shabo/home-Vilkovo-Oysters-Shabo.jpg">
