--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -307,7 +307,7 @@
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
 						   <span>
 						          <span class="fa fa-cutlery" aria-hidden="true"></span>
-							   &nbsp; Уха стерлядь или осетрина или севрюга
+							   &nbsp; Уха стерлядь или осетрина, или севрюга
 						   </span>
 						    <span class="badge badge-primary badge-pill">350 грн./400 г.</span>
 						  </li>
