--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -46,6 +46,7 @@
     <!-- //google fonts -->
 	<style>
 		.txt-idnt-0 {text-indent: 0px;}
+		.list-shadow {box-shadow: 0 0 16px rgb(0 0 0 / 10%);}
 		.highlight {	
 			background-color: #f7f7f9;
 		        padding: .5rem;
@@ -289,7 +290,7 @@
 					   На обратной дороге заезжаем покушать в кафе «Старый город» на острова,
 						где готовят <span class="text-danger">удивительные блюда: </span>
 				        </p>
-					    <ul class="list-group listing txt-idnt-0"> 
+					    <ul class="list-group listing txt-idnt-0 list-shadow"> 
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
 						    <span>
 							    <span class="fa fa-cutlery" aria-hidden="true"></span>
@@ -645,7 +646,7 @@
 						- Игристое, брют белое.<br>
 					 </p>
 					 <br />
-				         <ul class="list-group listing txt-idnt-0"> 
+				         <ul class="list-group listing txt-idnt-0 list-shadow"> 
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
 						    <span>
 							    Экскурсия Стандарт <span class="font-italic">(1 час 30 мин.)</span>
@@ -675,7 +676,7 @@
 					 <p class="text-danger">
 					    На выбор :
 					  </p>
-					    <ul class="list-group listing txt-idnt-0"> 
+					    <ul class="list-group listing txt-idnt-0 list-shadow"> 
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
 						    <span>
 							    Экскурсии Устрицы Скифии  <span class="font-italic">(по-желанию)</span>
