--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -47,6 +47,15 @@
 	<style>
 		.txt-idnt-0 {text-indent: 0px;}
 		.list-shadow {box-shadow: 0 0 16px rgb(0 0 0 / 10%);}
+		.list-shadow:hover {
+		    z-index: 2;
+		    -webkit-transform: scale(1.03);
+		    transform: scale(1.03);
+		    -webkit-box-shadow: 0 2px 15px 0 rgb(0 0 0 / 15%);
+		    box-shadow: 0 2px 15px 0 rgb(0 0 0 / 15%);
+		}
+
+
 		.highlight {	
 			background-color: #f7f7f9;
 		        padding: .5rem;
