--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -46,7 +46,7 @@
     <!-- //google fonts -->
 	<style>
 		.txt-idnt-0 {text-indent: 0px;}
-		.list-shadow {box-shadow: 0 0 16px rgb(0 0 0 / 10%);}
+		.list-shadow {box-shadow: 0 0 16px rgb(0 0 0 / 10%); transition: all .3s;}
 		.list-shadow:hover {
 		    z-index: 2;
 		    -webkit-transform: scale(1.03);
