--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -301,7 +301,7 @@
 				        </p>
 					    <ul class="list-group listing txt-idnt-0 list-shadow"> 
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						    <span>
+						    <span class="text-left">
 							    <span class="fa fa-cutlery" aria-hidden="true"></span>
 							    &nbsp; Осетрина или стерлядь жаренная (русская печь)
 					            </span>
