--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -308,9 +308,9 @@
 						    <span class="badge badge-primary badge-pill">140 грн./100 г.</span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						     <span>
+						     <span class="d-flex justify-content-start">
 						            <span class="fa fa-cutlery" aria-hidden="true"></span>
-							     &nbsp; Жаренные лягушачьи лапки
+							    <span>&nbsp;Жаренные лягушачьи лапки</span>
 						     </span>
 						    <span class="badge badge-primary badge-pill">150 грн./150 г.</span>
 						  </li>
