--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -315,9 +315,9 @@
 						    <span class="badge badge-primary badge-pill">150 грн./150 г.</span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						   <span>
+						   <span class="d-flex justify-content-start">
 						          <span class="fa fa-cutlery" aria-hidden="true"></span>
-							   &nbsp; Уха стерлядь или осетрина, или севрюга
+							  <span>&nbsp;Уха стерлядь или осетрина, или севрюга</span>
 						   </span>
 						    <span class="badge badge-primary badge-pill">350 грн./400 г.</span>
 						  </li>
@@ -657,9 +657,11 @@
 					 <br />
 				         <ul class="list-group listing txt-idnt-0 list-shadow"> 
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						    <span>
+                                                   <span  class="d-flex justify-content-start">
+						      <span>
 							    Экскурсия Стандарт <span class="font-italic">(1 час 30 мин.)</span>
-					            </span>
+					              </span>
+                                                    </span>
 						    <span class="badge badge-primary badge-pill">280 грн./чел.</span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
