--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -308,14 +308,14 @@
 						    <span class="badge badge-primary badge-pill">140 грн./100 г.</span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						     <span class="d-flex justify-content-start">
+						     <span class="text-left">
 						            <span class="fa fa-cutlery" aria-hidden="true"></span>
 							    <span>&nbsp;Жаренные лягушачьи лапки</span>
 						     </span>
 						    <span class="badge badge-primary badge-pill">150 грн./150 г.</span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						   <span class="d-flex justify-content-start">
+						   <span class="text-left">
 						          <span class="fa fa-cutlery" aria-hidden="true"></span>
 							  <span>&nbsp;Уха стерлядь или осетрина, или севрюга</span>
 						   </span>
@@ -657,7 +657,7 @@
 					 <br />
 				         <ul class="list-group listing txt-idnt-0 list-shadow"> 
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                   <span  class="d-flex justify-content-start">
+                                                   <span  class="text-left">
 						      <span>
 							    Экскурсия Стандарт <span class="font-italic">(1 час 30 мин.)</span>
 					              </span>
@@ -665,7 +665,7 @@
 						    <span class="badge badge-primary badge-pill">280 грн./чел.</span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						     <span>
+						     <span class="text-left">
 							     Стандарт с дегустацией <span class="font-italic">(2 часа 30 мин.)</span>
 						     </span>
 						    <span class="badge badge-primary badge-pill">360 грн./чел.</span>
@@ -689,19 +689,19 @@
 					  </p>
 					    <ul class="list-group listing txt-idnt-0 list-shadow"> 
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						    <span>
+						    <span class="text-left">
 							    Экскурсии Устрицы Скифии  <span class="font-italic">(по-желанию)</span>
 					            </span>
 						    <span class="badge badge-primary badge-pill">120 грн.</span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						     <span>
+						     <span class="text-left">
 						            Экскурсия с дегустацией 1 бокал вина  <span class="font-italic">(входит - 3 устрицы)</span>
 						     </span>
 						    <span class="badge badge-primary badge-pill">300 грн./чел. </span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						   <span>
+						   <span class="text-left">
 						          Экскурсия с дегустацией 2 бокала вина  <span class="font-italic">(входит - 6 устриц)</span>
 						   </span>
 						    <span class="badge badge-primary badge-pill">460 грн./чел.</span>
