--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -193,7 +193,7 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
-                                        <p><strong>11:00, 08.05</strong> сбор в районе острова Хортица
+                                        <p><strong>11:00</strong> сбор в районе острова Хортица
                                             (дополнительно оповещаем всех кто записался
                                             за 2 дня до начала экскурсии).
                                             Минутка позитива и в путешествие.
@@ -231,10 +231,7 @@
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     позитивный настрой на долгие месяцы вперед;
-                                </li>
-                                <li class="list-group-item list-group-item-success ">
-                                    1 кг вкуснейших лимонов с собой каждому (лимоны можно кушать без сахара);
-                                </li>
+                                </li>                                
                                 <li class="list-group-item list-group-item-success ">
                                     магнит от "Нового поворота".
                                 </li>
