--- a/page-Zaporizhzhia-on-Dnieper.html
+++ b/page-Zaporizhzhia-on-Dnieper.html
@@ -131,9 +131,10 @@
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-info-circle"></span><strong> Информация!</strong><br />
                             <span class="txt-alg-jf">
-                                Стоимость <strong>до 22.05.2021: 95 грн.</strong>, 80 грн. - от 5 до 12 лет;<br>
-                                Стоимость <strong>23-29.05.2021: 105 грн.</strong>, 95 грн. - от 5 до 12 лет.<br>
+                                Стоимость <strong>до 20.08.2021: 95 грн.</strong>, 80 грн. - от 5 до 12 лет;<br>
+                                Стоимость <strong>с 21.08.2021: 105 грн.</strong>, 95 грн. - от 5 до 12 лет.<br>
                                 До 4-х лет бесплатно.
+                                <hr>
                                 Бери с собой друзей и родных, это будет круто!
                             </span>
                         </div>
