--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -114,7 +114,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span  class="dateOfTravel">01 Августа  </span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span  class="dateOfTravel">05 Сентября  </span>
                                     <!-- //Дата -->
                                 </li>
                             </ul>
