--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -105,7 +105,7 @@
 					<tr>
 					  <th scope="row">1</th>
 					  <td>Яхтклуб И AQUAZOO</td>
-					  <td>01 Августа</td>
+					  <td>05 Сентября</td>
 					</tr>
 
 					<tr>
