--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -145,14 +145,14 @@
                             <br />
 				
                             <span class="txt-alg-jf">
-                                Цена: <u>520 грн.</u> при бронировании до <strong> 04 июля</strong>,
+                                Цена: <u>520 грн.</u> при бронировании до <strong> 10 августа</strong>,
 				    <u>500 грн.</u> 3 - 18 лет,
 				    до 3-х лет бесплатно <i>(без предоставления отдельного места в транспорте).</i>
                             </span>
 			   <hr>
 				
                             <span class="txt-alg-jf">
-                                Цена: <u>540 грн.</u> при бронировании  до <strong>24 июля</strong>
+                                Цена: <u>540 грн.</u> при бронировании  до <strong>24 августа</strong>
 				    <u>520 грн.</u> 3 - 18 лет,
 				    до 3-х лет бесплатно <i>(без предоставления отдельного места в транспорте).</i>
                             </span>
