--- a/page-Yacht-club-and-Aquazoo.html
+++ b/page-Yacht-club-and-Aquazoo.html
@@ -152,7 +152,7 @@
 			   <hr>
 				
                             <span class="txt-alg-jf">
-                                Цена: <u>540 грн.</u> при бронировании  до <strong>24 августа</strong>
+                                Цена: <u>540 грн.</u> при бронировании с <strong>11 по 23 августа</strong>
 				    <u>520 грн.</u> 3 - 18 лет,
 				    до 3-х лет бесплатно <i>(без предоставления отдельного места в транспорте).</i>
                             </span>
