--- a/packages.html
+++ b/packages.html
@@ -517,12 +517,12 @@
             <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
             <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 
-                <!-- Джарылгач - Украинские Мальдивы  -->
+                <!-- Фестиваль Воздушных Шаров  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Джарылгач</h4>
+                    <h4 class="destination mb-3">Фестиваль</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Dzharylgach.html">
-                            <img src="images/Dzharylgach/pop-Dzharylgach.jpg" class="img-fluid" alt="Джарылгач - Украинские Мальдивы">
+                        <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
+                            <img src="images/Baloon-fast/balloon-fastival-max.jpg" class="img-fluid" alt="Фестиваль Воздушных Шаров">
                         </a>
                         <div class="rating">
                             <ul>
@@ -536,12 +536,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Джарылгач</h4>
+                            <h4>Фестиваль</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Джарылгач - Украинские Мальдивы  -->
+                <!-- //Фестиваль Воздушных Шаров  -->
                 
                 <!-- Сырная ферма и Пасека -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
