--- a/about.html
+++ b/about.html
@@ -111,6 +111,16 @@
                     <p class="mt-3">
                         Путешествуйте с улыбкой. С любовью Новый поворот!
                     </p>
+                    
+                    <!-- Оставить отзыв в Google -->
+                        <div class="page-booking-btn ml-1 mt-1 mb-1 row">
+                            <a href="https://g.page/r/Cdm-EtbnpCKPEAg/review">
+                                <button type="button" class="btn btn-outline-info mr-3">
+                                   Оставить отзыв в Google
+                                </button>
+                            </a>
+                        </div>
+                    <!-- //Оставить отзыв в Google -->
                 </div>
                 <div class="col-lg-6 about-right text-lg-right mt-lg-0 mt-5"
                     style="display: flex; align-items: center; justify-content: center;">
