--- a/about.html
+++ b/about.html
@@ -111,9 +111,9 @@
                         Путешествуйте с улыбкой. С любовью Новый поворот!
                     </p>
                     <!-- Оставить отзыв в Google -->
-                        <div class="page-booking-btn ml-1 mt-1 mb-1 row">
+                        <div class="page-booking-btn ml-1 mt-1 mb-1">
                             <a href="https://g.page/r/Cdm-EtbnpCKPEAg/review">
-                                <button type="button" class="btn btn-outline-info mr-3">
+                                <button type="button" class="btn btn-outline-info mr-3 w-100">
                                    Оставить отзыв в Google
                                 </button>
                             </a>
