--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                     </p>
                     <!-- Оставить отзыв в Google -->
                         <div class="mt-4 mb-1">
-                            <a href="https://g.page/r/Cdm-EtbnpCKPEAg/review">
+                            <a href="https://g.page/r/Cdm-EtbnpCKPEAg/review"  target="_blank">
                                 <button type="button" class="btn btn-outline-info mr-3 w-100">
                                    Оставить отзыв в Google
                                 </button>
