--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -154,7 +154,7 @@
                        <hr>
                        
                         <!-- Alert info -->
-                       <!-- <div class="alert alert-info mt-3 ">
+                        <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             
                             <span  class="fa fa-info-circle"></span><strong> Информируем</strong><br />
@@ -170,7 +170,7 @@
                         <ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 3750 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>2 Дня</span></li>
-                        </ul>-->
+                        </ul>
                         <br>
                         <p>
                             Не забудь своих друзей, в большой компании всегда веселей!
