--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -157,7 +157,7 @@
                         <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             
-                            <span  class="fa fa-info-circle"></span><strong> Информируем</strong><br />
+                            <span  class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
                                 Цена билета до 15 августа* : <strong>3500 грн.</strong> от 10 до 200 лет, <strong>3450 грн.</strong> 7-10 лет<hr>
                                 С 20 августа по 31 августа <strong>3650 грн.</strong> взрослые, <strong>3500 грн.</strong> 7-10 лет <hr>
