--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -285,24 +285,28 @@
                                             Отмечайте наши странички, Вам +1000000000 в карму! 
                                         </p>
                                         <h4>День 2 </h4>
-                                        <p><strong>07:00 </strong>
+                                        <p><strong>06:00-07:00 </strong>
                                             Кто рано встал, тот все успел! А у нас еще впереди Меджибош и Умань! 
                                             Потому самостоятельно завтракаем и быстренько выезжаем дальше.
                                             Кто опоздает, назначается фотографом и делает всем по фотке в 
                                             супер-ракурсе или поет зажигательную песню чтоб всем взбодриться:) 
                                         </p>
-                                        <p><strong>10:00-11:00 </strong>
+                                        <p><strong>07:30-08:00 </strong>
                                             Поразительная крепость, на его фоне чувствуешь себя песчинкой
                                             в океане времени. Замок Белый Лебедь. Почему ? А мы это узнаем 
                                             от местного экскурсовода!(доп.расход)
                                             Посещение замка по-желанию. Можно сделать фото на его фоне и 
                                             полежать на травке отдохнуть от всех  
                                         </p>
-                                        <p><strong>13:00-13:30 </strong>
+                                        <p><strong>10:00-10:15</strong>
                                             Супер вкусное кафе в Умани . Сами активно выбираем что хотим и
                                             набираемся сил перед прогулкой в парке (доп.расход).
                                         </p>
-                                        <p><strong>13:40-14:40 </strong>
+                                        <p><strong>13:00-13:30 </strong> Супер вкусное кафе в Умани.
+                                            Сами активно выбираем что хотим и набираемся
+                                            сил перед прогулкой в парке.(доп.расход).
+                                        </p>
+                                        <p><strong>13:40-15:40 </strong>
                                             Новая Софиевка ЧЮДО СКАЗКА Умани. Самое потрясающее место 
                                             чтоб посмотреть и сделать удивительные фото. 
                                             Огнедышащие драконы, крылатые лошади, 
@@ -315,7 +319,7 @@
                                             Чтоб не заслужить общий гнев группы, вовремя
                                             собираемся и отправляемся в путь.
                                         </p>
-                                        <p><strong>23:00-01:30 </strong>
+                                        <p><strong>00:00-01:30 </strong>
                                             Ориентировочное время прибытия. 
                                             Почему так, зависит от длительности стоянок,
                                             иногда сложно всем собраться после хорошего отдыха и дороги.
