--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -104,8 +104,8 @@
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                            Новая Софиевка Умань - Целебная Бакота -
-                            Каменец Подольский - Фестиваль Воздушных Шаров -
+                            Софиевка Умань. Целебная Бакота.
+                            Каменец Подольский - Фестиваль Воздушных Шаров.
                             Меджибошский Замок Белый Лебедь.
                         </h4>
                        <p class="txt-alg-jf">
@@ -114,6 +114,7 @@
                            
                         </p>
                         <p class="txt-alg-jf">
+                            ЧУДЕСНЫЕ ВОЗДУШНЫЕ ШАРЫ НАД СТАРИННЫМ ЗАМКОМ.
                             Мы побываем в прекрасном Каменец-Подольском,
                             этот город завораживает своими обрывистыми каньонами, 
                             старинными улочками и восхитительным замком!
@@ -139,11 +140,19 @@
                             гигантские грибы, яркие пейзажи Японии,
                             потрясающие фонтаны радуги и не только.
                          </p>
+                         <p class="txt-alg-jf">
+                            А если вы хотите ощутить дух старины Старая Софиевка
+                            с его античными скульптурами, водопадами и огромными 
+                            озерами, милыми мостиками для Вас. Интереснейшая
+                            экскурсия в компании местного супер интересного 
+                            экскурсовода или прогулка по подземной реке
+                            Ахеронт (доп.расход). Теперь на выбор посещение одно из парков! 
+                         </p>
                          <p class="p-2 bg-warning text-white txt-alg-jf">
-                         Такого вы еще не видели!Бронируйте уже сейчас!
-                         Места ограничены! Кто будет долго думать сидит дома и завидует молча.
-                         Ждем Вас, Ваших родных, близких и друзей на экскурсию!
-                         Собери компанию 16 человек, 17 едет бесплатно )
+                            Такого вы еще не видели! Бронируйте уже сейчас!
+                            Места ограничены! Кто будет долго думать сидит дома и завидует молча.
+                            Ждем Вас, Ваших родных, близких и друзей на экскурсию!
+                            Собери компанию 16 человек, 17 едет бесплатно )
                          </p>
                        </div>
                        <p id="MoreDetailsHide" onclick="document.getElementById('MoreDetails').style.display='block'; document.getElementById('MoreDetailsHide').style.display='none'"
@@ -243,91 +252,60 @@
                                         <p><strong>20:00</strong>
                                             Выезд из Центра Запорожья после минутки позитива.
                                             Едем на комфортабельном транспорте тур.класса (раскладные сидения), TV
-                                            Заберем Вас Автовокзал-Фестивальная-Металлургов-Каховская(уточняйте при бронировании)
-                                            22 мая 12:00-12:30 обед в "Ресторації національної кухні "Ситий Козак" г.Каменец-Подольский
-                                            Настоящий украинский Борщ или вкуснейший суп(на выбор), пюрешка с отбивной(как на празднике), 
-                                            салатик свежесть, местный хлебушек, ароматный чай или вкуснейший компот(на выбор)
-                                            После вкусного обеда направляемся на отдых в гостиницу.
+                                            Заберем Вас Автовокзал - Фестивальная - Металлургов - Каховская (уточняйте при бронировании).
                                         </p>
                                         <h4>День 1 </h4>
                                         <p><strong>11:00-12:00 </strong>
-                                             Время отдыха после дороги.
+                                             Прибытие в гостиницу, заселение. 
                                         <p/>
-                                          <p><strong>12:20-13:00 </strong>
-                                             Путешествие в Бакоту. Место с потрясающей природой,
-                                             подышав там 1,5-2 часа вы забудете об усталости, ведь 
-                                             в компании самого колоритного Каменец-Подольского
-                                             экскурсовода мы прогуляемся по старинным тропинкам 
-                                             средневековых монахов, и заглянем в их жилища-пещеры.
-                                             Обязательно возьмем с собой бутылку для целебной родниковой воды,
-                                             ведь по поверьям она лечит 1000 болезней!
+                                        <p><strong>12:20-13:00 </strong>
+                                             Обед в гостинице: 
+                                             настоящий украинский борщик со сметанкой,
+                                             рисик объедятина с фрикассе (курочка с соусом бешамель),
+                                             салатик "витаминка" (огурчики, помидорчики, капуста), хлеб, компот. 
                                         </p>
                                         <p><strong>13:00-18:00 </strong>
-                                            Ужин в самом лучшем месте города "Ресторації національної кухні 
-                                            "Ситий Козак" г.Каменец-Подольский. 
-                                            Антикризисная гречка с вкусной котлеткой или сытнейшие блинчики 
-                                            с творогом и изюмом в шоколаде (на выбор); 
-                                            Ароматный чай или вкуснейший компот(на выбор).
+                                            Путешествие в Бакоту. Место с потрясающей природой, 
+                                            подышав там 1,5-2 часа вы забудете об усталости,
+                      ведь в компании самого колоритного Каменец-Подольского
+                      экскурсовода мы прогуляемся по старинным тропинкам 
+                      средневековых монахов, и заглянем в их жилища-пещеры. 
+                      Обязательно возьмем с собой бутылку для целебной родниковой воды,
+                      ведь по поверьям она лечит 1000 болезней!
                                         </p>
                                         <p><strong>18:00-19:00 </strong>
-                                            ВАУ экскурсия! В компании местного самого улыбчивого 
-                                            экскурсовода мы увидим: Старинный город, каньон речки Смотрич стены которого более 30м,
-                                            силуэты средневекового замка, рыночную площадь с одной из 
-                                            древнейших ратуш Украины, уникальнейшую архитектурную композицию 
-                                            мусульманский минарет у христианского храма, об этом можно еще 
-                                            писать и писать, стоит это все увидеть и услышать!
+                                            Ужин самостоятельно в центре города, 1000 вариантов вкуснейший заведений! 
                                         </p>
                                         <p><strong>19:00-20:00 </strong>
-                                            Все кто устал отправляются на отдых в гостиницу,
-                                            а кто еще хочет гулять и делать потрясающие фото для
-                                            Instagram и супер видео для Tik Tok продолжает прогулку.
-                                            Не забывайте о нас когда выставляете сторизы и фото:) 
-                                            Отмечайте наши странички, Вам +1000000000 в карму! 
+                                            ВАУ экскурсия! В компании местного самого улыбчивого экскурсовода мы увидим: Старинный город, каньон речки Смотрич стены которого более 30м,
+силуэты средневекового замка, рыночную площадь с одной из древнейших ратуш Украины, уникальнейшую архитектурную композицию мусульманский минарет у христианского храма, об этом можно еще писать и писать, стоит это все увидеть и услышать!
                                         </p>
+                                <hr>
                                         <h4>День 2 </h4>
                                         <p><strong>06:00-07:00 </strong>
-                                            Кто рано встал, тот все успел! А у нас еще впереди Меджибош и Умань! 
-                                            Потому самостоятельно завтракаем и быстренько выезжаем дальше.
-                                            Кто опоздает, назначается фотографом и делает всем по фотке в 
-                                            супер-ракурсе или поет зажигательную песню чтоб всем взбодриться:) 
+                           Супер предложение! Полет на самолете 3 пассажирских места и 30 минут кайфа всего 1000 грн/чел! Отдельная оплата за трансфер и полет, по желанию. Кто рано встал, тот все успел! Также  возможен заказ полета на воздушном шаре 3500 грн/чел! Все заказы полетов заранее с предоплатой!  
                                         </p>
                                         <p><strong>07:30-08:00 </strong>
-                                            Поразительная крепость, на его фоне чувствуешь себя песчинкой
-                                            в океане времени. Замок Белый Лебедь. Почему ? А мы это узнаем 
-                                            от местного экскурсовода!(доп.расход)
-                                            Посещение замка по-желанию. Можно сделать фото на его фоне и 
-                                            полежать на травке отдохнуть от всех  
+                                            Очень вкусный и питательный завтрак на выбор : сырники со сметанкой или блинчики с курочкой и сметанкой +ароматный чайок, выселение из гостиницы. У нас еще впереди Меджибош и Умань! Потому быстренько выезжаем дальше.
+              Кто опоздает, назначается фотографом и делает всем по фотке в супер-ракурсе или поет зажигательную песню чтоб всем взбодриться:)
                                         </p>
                                         <p><strong>10:00-10:15</strong>
-                                            Супер вкусное кафе в Умани . Сами активно выбираем что хотим и
-                                            набираемся сил перед прогулкой в парке (доп.расход).
+                                            Поразительная крепость, на его фоне чувствуешь себя песчинкой в океане времени. Замок Белый Лебедь. Время для крутых фото и видео, чтоб больше осталось для парка в Умани!  
                                         </p>
-                                        <p><strong>13:00-13:30 </strong> Супер вкусное кафе в Умани.
-                                            Сами активно выбираем что хотим и набираемся
-                                            сил перед прогулкой в парке.(доп.расход).
+                                        <p><strong>13:00-13:30 </strong> 
+               Супер вкусное кафе в Умани. Сами активно выбираем что хотим и набираемся сил перед прогулкой в парке.(доп.расход)
                                         </p>
                                         <p><strong>13:40-15:40 </strong>
-                                            Новая Софиевка ЧЮДО СКАЗКА Умани. Самое потрясающее место 
-                                            чтоб посмотреть и сделать удивительные фото. 
-                                            Огнедышащие драконы, крылатые лошади, 
-                                            гигантские грибы, яркие пейзажи Японии, 
-                                            потрясающие фонтаны радуги и не только. 
-                                            По-желанию берем местного экскурсовода и слушаем 
-                                            потрясающую историю создания Нового парка(доп.расход)
-                                            или гуляем без ведь парк сам по-себе прекрасен и вся
-                                            информация о нем на стендах возле объектов.
-                                            Чтоб не заслужить общий гнев группы, вовремя
-                                            собираемся и отправляемся в путь.
+                                            Новая Софиевка ЧЮДО СКАЗКА Умани. Самое потрясающее место чтоб посмотреть и сделать удивительные фото. Огнедышащие драконы, крылатые лошади, 
+гигантские грибы, яркие пейзажи Японии, потрясающие фонтаны радуги и не только. 
+По-желанию берем местного экскурсовода и слушаем потрясающую историю создания Нового парка(доп.расход) или гуляем без ведь парк сам по-себе прекрасен и вся информация о нем на стендах возле объектов. Или! Старая Софиевка! древнейший парк с самым интересным экскурсоводом! 1.5 часа экскурсии и 30 минут для фото или прогулки по удивительной реке Ахеронт! Море эмоций и крутых впечатлений! 
+Чтоб не заслужить общий гнев группы, вовремя собираемся и отправляемся в путь.
                                         </p>
                                         <p><strong>00:00-01:30 </strong>
-                                            Ориентировочное время прибытия. 
-                                            Почему так, зависит от длительности стоянок,
-                                            иногда сложно всем собраться после хорошего отдыха и дороги.
-                                            Мы не знаем насколько будет загружена 
-                                            трасса в день возврата.
-                                            Прибываем в Запорожье высаживаем от Каховской и дальше по проспекту до Автовокзала. 
-                                            Возвращаемся полностью отдохнувшими в потрясающем настроении, с морем впечатлений и крутыми фото!
-                                            Всех обнимаем и ждем запись на тур!
+                                            ориентировочное время прибытия. Почему так, зависит от длительности стоянок, иногда сложно всем собраться после хорошего отдыха и дороги. Мы не знаем насколько будет загружена трасса в день возврата.
+Прибываем в Запорожье высаживаем от Каховской и дальше по проспекту до Автовокзала. 
+Возвращаемся полностью отдохнувшими в потрясающем настроении, с морем впечатлений и крутыми фото!
+Всех обнимаем и ждем запись на тур!
                                         </p>
                                         <hr>
                                         <p>
