--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -148,7 +148,7 @@
                             экскурсовода или прогулка по подземной реке
                             Ахеронт (доп.расход). Теперь на выбор посещение одно из парков! 
                          </p>
-                         <p class="p-2 bg-warning text-white txt-alg-jf">
+                         <p class="p-2 bg-light txt-alg-jf">
                             Такого вы еще не видели! Бронируйте уже сейчас!
                             Места ограничены! Кто будет долго думать сидит дома и завидует молча.
                             Ждем Вас, Ваших родных, близких и друзей на экскурсию!
