--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -114,7 +114,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span  class="dateOfTravel"> 23 - 24 Августа  </span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span  class="dateOfTravel"> 22 Августа  </span>
                                     <!-- //Дата -->
                                 </li>
                             </ul>
@@ -138,6 +138,8 @@
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br><br>
                             <span class="txt-alg-jf">
+                              СУПЕР ЦЕНА - 950 грн. 6 - 12 лет, до 6 лет без места беплатно в сопровождении 2х взрослых.
+                               <!--
                                 При бронировании с <strong>29 июня по 10 июля: 1570 грн.</strong>, дети с 6 до 12 лет:
                                 1550 грн.! <hr>
                                 При бронировании с <strong>11 июля по 29 июля: 1650 грн.</strong>, дети с 6 до 12 лет:
@@ -146,14 +148,15 @@
                                 до 12 лет: 1650 грн.! <hr>
                                <i> Дети до 5 лет без отдельного места в транспорте и при поселении бесплатно! <br>
                                 Предоплата 50% от суммы, или ... 300грн и доплата по согласованию с менеджером!</i>
+                               -->
                             </span>
                         </div>
                         <!-- // Alert info -->
 			    
                         <ul class="listing">
                             <!-- Цена и Дата -->
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 1570 Грн.</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>2 Дня</span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 1150 Грн.</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>1 День</span></li>
                             <!-- //Цена и Дата -->
                         </ul>
                         
