--- a/packages.html
+++ b/packages.html
@@ -173,8 +173,8 @@
                             Животные Аскании ждут гостей...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 23 - 24 Августа </span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 22 Августа </span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
