--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -121,7 +121,7 @@
                         </div>
                         
                         <h4 class="mb-3">
-				 Аскания-Нова, релакс на море, дегустация вин на розовом озере. Арабатские термы!
+			   Аскания-Нова САФАРИ и  восхитительное Розовое озеро!
                         </h4>
                         
                         <p class="txt-alg-jf">
