--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -400,8 +400,8 @@
                                     Все всегда в восторге!
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    1 НОЧЬ НА МОРЕ в гостинице на Арабатской стреле(поселение 2х и 3х местные номера,
-                                    моря 5 минут, рядом магазины и кафе);
+                                    Мы подскажем где покушать, но оплатить прийдеться Вам.
+Группе будет предложено посещение Арабатских термов по-желанию 200 грн. (цена актуальная на май 2021, точные расценки узнаем за 2-3 дня до выезда);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     дегустация 2 видов вкуснейших вин на Розовом озере! Взрыв эмоций от красоты (группа
