--- a/page-Askania-Nova-Safari.html
+++ b/page-Askania-Nova-Safari.html
@@ -390,11 +390,11 @@
                                     офигенная экскурсия по Аскании - Нова!(Дендро и Зоопарк) 2.5-3 часа! ООООчень круто!
                                     Все всегда в восторге!
                                 </li>
-                                <li class="list-group-item list-group-item-success ">
+                               <!-- <li class="list-group-item list-group-item-success ">
                                                                     </li>
                                 <li class="list-group-item list-group-item-success ">
                                     
-                                </li>
+                                </li>-->
                                 <li class="list-group-item list-group-item-success ">
                                     сопровождение представителя нашей компании;
                                 </li>
